[gd_scene load_steps=8 format=3 uid="uid://game"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_game"]
[ext_resource type="PackedScene" uid="uid://player_klongo" path="res://scenes/PlayerKLongo.tscn" id="2_player"]
[ext_resource type="Script" path="res://scripts/level_manager.gd" id="3_levelmanager"]
[ext_resource type="PackedScene" uid="uid://hud" path="res://scenes/ui/HUD.tscn" id="4_hud"]
[ext_resource type="PackedScene" uid="uid://pausemenu" path="res://scenes/ui/PauseMenu.tscn" id="5_pause"]
[ext_resource type="PackedScene" uid="uid://gameover" path="res://scenes/ui/GameOver.tscn" id="6_gameover"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bounds"]
size = Vector2(100, 2000)

[node name="Game" type="Node2D"]
script = ExtResource("1_game")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)

[node name="SkyRect" type="ColorRect" parent="ParallaxBackground/Sky"]
offset_left = -1000.0
offset_top = -500.0
offset_right = 10000.0
offset_bottom = 1500.0
color = Color(0.15, 0.15, 0.2, 1)

[node name="Buildings" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 0.1)

[node name="Building1" type="ColorRect" parent="ParallaxBackground/Buildings"]
offset_left = 100.0
offset_top = 400.0
offset_right = 250.0
offset_bottom = 1180.0
color = Color(0.2, 0.2, 0.25, 1)

[node name="Building2" type="ColorRect" parent="ParallaxBackground/Buildings"]
offset_left = 300.0
offset_top = 300.0
offset_right = 500.0
offset_bottom = 1180.0
color = Color(0.18, 0.18, 0.22, 1)

[node name="Building3" type="ColorRect" parent="ParallaxBackground/Buildings"]
offset_left = 550.0
offset_top = 500.0
offset_right = 700.0
offset_bottom = 1180.0
color = Color(0.22, 0.22, 0.27, 1)

[node name="Office" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.1)

[node name="Wall" type="ColorRect" parent="ParallaxBackground/Office"]
offset_left = -500.0
offset_top = 200.0
offset_right = 10000.0
offset_bottom = 1180.0
color = Color(0.25, 0.25, 0.3, 1)

[node name="Windows" type="HBoxContainer" parent="ParallaxBackground/Office"]
offset_left = 0.0
offset_top = 300.0
offset_right = 10000.0
offset_bottom = 500.0
theme_override_constants/separation = 150

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(360, 640)
anchor_mode = 0
enabled = true

[node name="LevelManager" type="Node2D" parent="."]
script = ExtResource("3_levelmanager")

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(150, 1148)
z_index = 10

[node name="DeathZone" type="Area2D" parent="."]
position = Vector2(0, 1400)
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
shape = SubResource("RectangleShape2D_bounds")

[node name="HUD" parent="." instance=ExtResource("4_hud")]

[node name="PauseMenu" parent="." instance=ExtResource("5_pause")]

[node name="GameOver" parent="." instance=ExtResource("6_gameover")]

[connection signal="body_entered" from="DeathZone" to="." method="_on_death_zone_body_entered"]
